app/components/data-table/data_table.css
.title-button {
	float: center;
	background: rgba(0, 0, 0, 0.045);
	box-shadow: none;
	border-color: rgba(0, 0, 0, 0.3);
}

.title-button-h4 {
	text-align: center;
	cursor: pointer;
	margin-top: 0px;
	margin-bottom: 0px;
	font-size: 21px;
	letter-spacing: 2.5px;
}

.title-nobutton-h4 {
	text-align: center;
	margin-top: 0px;
	font-size: 21px;
	letter-spacing: 2.5px;
}

.data-table-footer-button {
	float: right;
	margin-top: -2px;
	margin-right: 7px;
}

.data_button_wrapper {
	padding-bottom: 10px;
}

